[package]
name = "flock"
authors = ["Tuukka Haapasalo <tuukka.haapasalo@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3" # Check crates.io for the latest version
rand = "0.8.5" # Check crates.io for the latest version
mint = "0.5.9"
nalgebra = "0.32.3"
